<resources>
    <string name="app_name">FoodHub</string>
    <string name="navigation_drawer">Navigation Drawer</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="favourites">Favourites</string>
    <string name="orderHistory">Order History</string>
    <string name="faq">FAQs</string>
    <string name="logOut">Log Out</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>
    <string name="mobile">Mobile Number(10 digits)</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="forgot_password"><u>Forgot Password?</u></string>
    <string name="register_yourself"><u>Don\'t have an account? Sign Up now</u></string>
    <string name="preferences_file_name">Users Preferences</string>
    <string name="registeryourself">Register Yourself</string>
    <string name="enter_credentials">Enter your registered mobile number and email below:</string>
    <string name="enter_otp">An OTP has been sent to your registered email address which will be valid for 24 hours. Enter the received OTP below:</string>
    <string name="freq_asked_ques"><u>Frequently asked Questions</u></string>
    <string name="fav_text">You have no Favourites yet. Explore and add them to your list!</string>
    <string name="order_history_text">You have not ordered anything yet. Explore and order now!</string>
    <string name="action_filter">Filter</string>
    <string name="action_sort">Sort</string>
    <string name="ans1">Ans. We are a Food Ordering app which lets you select your favourite restaurant and we will get it delivered to you.</string>
    <string name="ques1">Q. How does Food Hub work?</string>
    <string name="ques2">Q. When Can I expect my food?</string>
    <string name="ans2">Ans. The speedy delivery of your food is our utmost priority and you can expect your order to arrive within 30 minutes.</string>
    <string name="ques3">Q. Can I order from two different restaurant at the same time?</string>
    <string name="ans3">Ans. No, you cannot. But you can easily place two or more orders one after another</string>
    <string name="ques4">Q. Nothing is showing in my suburb, or is my favourite restaurant not listed?</string>
    <string name="ans4">Ans. We try our best to get your local gems on Food Hub. But your locality is quite a pretty big place! If we missed anything, you can let us know by contacting the developer of the app and we\'ll try and get them on board.</string>
    <string name="ques5">Q. How do I register myself in the app?</string>
    <string name="ans5">Ans. Well, that\'s easy. Just enter your name, phone number, active email address, your delivery address and create a password. And you are registered!</string>
    <string name="ques6">Q. I have forgotten my password. What should I do now?</string>
    <string name="ans6">Ans. No worries. You can easily go to the \"Forgot password\" link present on the login page, enter your registered email address and mobile number. You will get an OTP in your email address which will be valid for 24 hours. Just type in the OTP, type your new password and there you go. You password has been reset.</string>
</resources>