<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".activity.LoginActivity">

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="240dp"
        android:layout_height="100dp"
        android:src= "@drawable/food_app_logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"/>

    <EditText
        android:id="@+id/etMobileNumber"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="30dp"
        android:padding="10dp"
        android:layout_below="@id/imgLogo"
        android:inputType="phone"
        android:hint="@string/mobile"
        android:background="@drawable/edit_text_background"
        android:textColorHint="#ffff"
        android:maxLength="10"
        android:maxLines="1"
        android:autofillHints=" "
        android:textColor="#ffff"
        android:fontFamily="@font/walkway_black" />

    <EditText
        android:id="@+id/etpassword"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="20dp"
        android:padding="10dp"
        android:layout_below="@id/etMobileNumber"
        android:inputType="numberPassword"
        android:hint="@string/password"
        android:background="@drawable/edit_text_background"
        android:textColorHint="#ffff"
        android:autofillHints=" "
        android:textColor="#ffff"
        android:fontFamily="@font/walkway_black" />

    <Button
        android:id="@+id/btnLogIn"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/etpassword"
        android:background="@color/colorPrimaryDark"
        android:layout_margin="15dp"
        android:text="@string/log_in"
        android:textSize="20sp"
        android:fontFamily="@font/walkway_black"
        android:textColor="#ffffff"/>

    <TextView
        android:id="@+id/txtForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/btnLogIn"
        android:layout_marginTop="20dp"
        android:textSize="17sp"
        android:padding="6dp"
        android:textColor= "#ffffff"
        android:fontFamily="@font/walkway_black"/>


    <TextView
        android:id="@+id/txtRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_yourself"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="30dp"
        android:textSize="17sp"
        android:padding="6dp"
        android:textColor="#ffff"
        android:fontFamily="@font/walkway_black"/>

    <ProgressBar
        android:id="@+id/progressBarLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="#ffff"
        android:translationZ="2dp"/>

</RelativeLayout>